# bc-reference-agent

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  reference-links.txt  run.ps1  run.sh  sample-orders.db
app/: agent_card.json  main.py
app/agents/: concierge.py  handler.py  sample_shipping_agent.py
app/auth/: __init__.py  dependencies.py
app/core/: config.py
app/models/: __init__.py  order.py
app/repositories/: __init__.py  order_repository.py
app/services/: ims_validator.py  session.py
app/static/css/: styles.css
app/static/js/: chat.js
app/templates/: chat.html  orders.html
data/: orders.db
scripts/: init-ollama.sh
tests/: conftest.py  test_a2a.py  test_agent.py  test_auth.py  test_health.py  test_repository.py
